Récupération des anciens fichiers

--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
 		<h2>Derniers films ajoutés</h2>
 		<table style="min-width: 100%;">
 			<tr>
-				<td style="width: 10%; text-align: center;"><a href="film/black-panther-wakanda-forever-2022/"><img class="affiche" src="film/black-panther-wakanda-forever-2022/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/le-menteur-2022/"><img class="affiche" src="film/le-menteur-2022/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/uncharted-2022/"><img class="affiche" src="film/uncharted-2022/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/bullet-train-2022/"><img class="affiche" src="film/bullet-train-2022/couverture.jpg"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-panther-wakanda-forever-2022/"><img class="affiche" src="film/black-panther-wakanda-forever-2022/couverture.jpg" widht="100%"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/le-menteur-2022/"><img class="affiche" src="film/le-menteur-2022/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/uncharted-2022/"><img class="affiche" src="film/uncharted-2022/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/bullet-train-2022/"><img class="affiche" src="film/bullet-train-2022/couverture.jpg" width="100" height="140"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" width="100" height="140"/></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg" width="100" height="140"></a></td>
 			</tr>
 		</table>
 
 		<h2>Dernières séries ajoutées</h2>
 		<table style="min-width: 100%;">
 			<tr>
-				<td style="width: 10%; text-align: center;"><a href="serie/mercredi-2022/"><img class="affiche" src="serie/mercredi-2022/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/mercredi-2022/"><img class="affiche" src="serie/mercredi-2022/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg" width="100" height="140"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg" width="100" height="140"></a></td>
 			</tr>
 		</table>
 
