--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<h2>Derniers films ajoutés</h2>
 		<table style="min-width: 100%;">
 			<tr>
-				<td style="width: 10%; text-align: center;"><a href="film/black-panther-wakanda-forever-2022/"><img class="affiche" src="film/black-panther-wakanda-forever-2022/couverture.jpg" widht="100%"></a></td>
+				<td style="width: 10%; text-align: center;"><a href="film/black-panther-wakanda-forever-2022/"><img class="affiche" src="film/black-panther-wakanda-forever-2022/couverture.jpg" widht="100" height="140"></a></td>
 				<td style="width: 10%; text-align: center;"><a href="film/le-menteur-2022/"><img class="affiche" src="film/le-menteur-2022/couverture.jpg" width="100" height="140"></a></td>
 				<td style="width: 10%; text-align: center;"><a href="film/uncharted-2022/"><img class="affiche" src="film/uncharted-2022/couverture.jpg" width="100" height="140"></a></td>
 				<td style="width: 10%; text-align: center;"><a href="film/bullet-train-2022/"><img class="affiche" src="film/bullet-train-2022/couverture.jpg" width="100" height="140"/></a></td>
