--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</header>
 
 		<h2>Derniers films ajoutés</h2>
-		<table style="min-width: 100%;">
+		<table style="max-width: 100%;">
 			<tr>
 				<td style="width: 10%; text-align: center;"><a href="film/black-panther-wakanda-forever-2022/"><img class="affiche" src="film/black-panther-wakanda-forever-2022/couverture.jpg" widht="100" height="140"></a></td>
 				<td style="width: 10%; text-align: center;"><a href="film/le-menteur-2022/"><img class="affiche" src="film/le-menteur-2022/couverture.jpg" width="100" height="140"></a></td>
@@ -34,7 +34,7 @@
 		</table>
 
 		<h2>Dernières séries ajoutées</h2>
-		<table style="min-width: 100%;">
+		<table style="max-width: 100%;">
 			<tr>
 				<td style="width: 10%; text-align: center;"><a href="serie/mercredi-2022/"><img class="affiche" src="serie/mercredi-2022/couverture.jpg" width="100" height="140"></a></td>
 				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg" width="100" height="140"></a></td>
