--- a/index.html
+++ b/index.html
@@ -8,47 +8,38 @@
 	</head>
 	<body>
 		<header>
-			<table style="min-width: 100%;">
+			<table style="max-width: 100vw;">
 				<tr>
-					<td style="width: 33%; text-align: left;"><img src="LOGO.PNG" alt="Logo" height="70"/></td>
-					<td style="width: 33%; text-align: center;"><a href="https://paypal.me/lagrossediscord?country.x=FR&locale.x=fr_FR" target="_blank"><img src="PayPal.png" alt="Faire un don" height="60"/></a></td>
-					<td style="width: 33%; text-align: right;"><a href="rechercher/"><img src="RechercherBtn.png" alt="Rechercher" height="60"/></a></td>
+					<td style="width: 33vw; text-align: left;"><img src="LOGO.PNG" alt="Logo" height="70"/></td>
+					<td style="width: 33vw; text-align: center;"><a href="https://paypal.me/lagrossediscord?country.x=FR&locale.x=fr_FR" target="_blank"><img src="PayPal.png" alt="Faire un don" height="60"/></a></td>
+					<td style="width: 33vw; text-align: right;"><a href="rechercher/"><img src="RechercherBtn.png" alt="Rechercher" height="60"/></a></td>
 				</tr>
 			</table>
 		</header>
 
 		<h2>Derniers films ajoutés</h2>
-		<table style="max-width: 100%;">
-			<tr>
-				<td style="width: 10%; text-align: center;"><a href="film/black-panther-wakanda-forever-2022/"><img class="affiche" src="film/black-panther-wakanda-forever-2022/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/le-menteur-2022/"><img class="affiche" src="film/le-menteur-2022/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/uncharted-2022/"><img class="affiche" src="film/uncharted-2022/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/bullet-train-2022/"><img class="affiche" src="film/bullet-train-2022/couverture.jpg"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"/></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"></a></td>
-			</tr>
-		</table>
+			<p>
+				<a href="film/black-panther-wakanda-forever-2022/"><img class="affiche" src="film/black-panther-wakanda-forever-2022/couverture.jpg"></a>
+				<a href="film/le-menteur-2022/"><img class="affiche" src="film/le-menteur-2022/couverture.jpg"></a>
+				<a href="film/uncharted-2022/"><img class="affiche" src="film/uncharted-2022/couverture.jpg"></a>
+				<a href="film/bullet-train-2022/"><img class="affiche" src="film/bullet-train-2022/couverture.jpg"/></a>
+				<a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"/></a>
+				<a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"></a>
+				<a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"></a>
+				<a href="film/black-adam-2022/"><img class="affiche" src="film/black-adam-2022/couverture.jpg"></a>
+			</p>	
 
 		<h2>Dernières séries ajoutées</h2>
-		<table style="max-width: 100%;">
-			<tr>
-				<td style="width: 10%; text-align: center;"><a href="serie/mercredi-2022/"><img class="affiche" src="serie/mercredi-2022/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
-				<td style="width: 10%; text-align: center;"><a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a></td>
-			</tr>
-		</table>
-
+			<p>
+				<a href="serie/mercredi-2022/"><img class="affiche" src="serie/mercredi-2022/couverture.jpg"></a>
+				<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a>
+				<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a>
+				<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a>
+				<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a>
+				<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a>
+				<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a>
+				<a href="serie/teen-wolf-2011/"><img class="affiche" src="serie/teen-wolf-2011/couverture.jpg"></a>
+			</p>	
 
 		<footer>
 			<h3>Tu n'as plus d'idée de film ou de série à regarder ?<br>Demande un <a href="filmrandom/" class="aleatoire"><img src="aléatoire.gif" width="10">film aléatoire<img src="aléatoire.gif" width="10"></a> ou une <a href="serierandom/" class="aleatoire"><img src="aléatoire.gif" width="10">série aléatoire<img src="aléatoire.gif" width="10"></a>.</h3>
